[package]
name = "jira_to_gantt"
version = "1.0.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
readme = "README.md"
description = "A tool to convert Jira CSV data to Gantt chart JSON5"
repository = "https://github.com/jlyonsmith/jiro_to_gantt"
keywords = ["gantt", "chart", "project", "csv"]
categories = ["command-line-utilities"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.10", features = ["derive"] }
colored = "2.0.0"
csv = "1.1.6"
json5 = "0.4.1"
serde = { version = "1.0.145", features = ["derive"] }
gantt_chart = { version = "2.0.0" }
